gutter git rm z-index fix

--- a/styles/base.less
+++ b/styles/base.less
@@ -35,6 +35,7 @@ atom-text-editor {
 			}
 			&.git-line-removed:before {
 				border-width: 8px; margin-top: -8px; bottom: -8px;
+				z-index: 2;
 			}
 
 			opacity: 1;
